# game_of_life

./: CMakeLists.txt
src/: entityswitch.cpp  entityswitch.h  gameoflife.cpp  gameoflife.h  main.cpp  starwars.cpp  starwars.h  wireworld.cpp  wireworld.h
